docs/assets/css/main.scss
---
# Only the main Sass file needs front matter (the dashes are enough)
---

@charset "utf-8";

@import "minimal-mistakes/skins/{{ site.minimal_mistakes_skin | default: 'default' }}"; // skin
@import "minimal-mistakes"; // main partials

//
// DeepSpeed customizations
//
body {
  background-color: #fff;
  font-family: Roboto, sans-serif;
}

.nav {
  position: -webkit-sticky;
  position: sticky !important;
  top: 0px;
  background-color: #222 !important;
}

.w-nav {
  position: relative;
  background: #dddddd;
  z-index:1000
}

.w-nav:before, .w-nav:after {
  content: " ";
  display: table;
  grid-column-start: 1;
  grid-row-start: 1;
  grid-column-end: 2;
  grid-row-end:2
}

.w-nav:after {
  clear:both
}

.w-nav-brand {
  position: relative;
  float: left;
  text-decoration: none;
  color:#333333
}

.w-nav-link {
  position: relative;
  display: inline-block;
  vertical-align: top;
  text-decoration: none;
  color: #222222;
  padding: 20px;
  text-align: left;
  margin-left: auto;
  margin-right:auto
}

.w-nav-link.w--current {
  color:#0082f3
}

.w-nav-menu {
  position: relative;
  float:right
}

[data-nav-menu-open] {
  display: block !important;
  position: absolute;
  top: 100%;
  left: 0;
  right: 0;
  background: #C8C8C8;
  text-align: center;
  overflow: visible;
  min-width:200px
}

.w--nav-link-open {
  display: block;
  position:relative
}

.w-nav-overlay {
  position: absolute;
  overflow: hidden;
  display: none;
  top: 100%;
  left: 0;
  right: 0;
  width:100%
}

.w-nav-overlay [data-nav-menu-open] {
  top: 0
}

.w-nav[data-animation="over-left"] .w-nav-overlay {
  width: auto
}

.w-nav[data-animation="over-left"] .w-nav-overlay, .w-nav[data-animation="over-left"] [data-nav-menu-open] {
  right: auto;
  z-index: 1;
  top: 0
}

.w-nav[data-animation="over-right"] .w-nav-overlay {
  width: auto
}

.w-nav[data-animation="over-right"] .w-nav-overlay, .w-nav[data-animation="over-right"] [data-nav-menu-open] {
  left: auto;
  z-index: 1;
  top:0
}

.w-nav-button {
  position: relative;
  float: right;
  padding: 18px;
  font-size: 24px;
  display: none;
  cursor: pointer;
  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
  tap-highlight-color: rgba(0, 0, 0, 0);
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select:none
}

.w-nav-button:focus {
  outline:0
}

.w-nav-button.w--open {
  background-color: #C8C8C8;
  color: white
}

.w-nav[data-collapse="all"] .w-nav-menu {
  display: none
}

.w-nav[data-collapse="all"] .w-nav-button {
  display:block
}

.w--nav-dropdown-open {
  display:block
}

.w--nav-dropdown-toggle-open {
  display:block
}

.w--nav-dropdown-list-open {
  position:static
}

.header-logo {
  width: 176px;
  height: 45px;
  cursor: default;
}

.header-div {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: auto;
  max-width: 1250px;
  min-width: 1000px;
  margin-right: auto;
  margin-left: auto;
  padding: 20px;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -ms-flex-align: center;
  align-items: center;
}

.header-brand-div {
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: auto;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: default;
}

img {
  max-width: 100%;
  vertical-align: middle;
  display: inline-block;
  border: 0;
}

.nav-menu {
  position: static;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: auto;
  clear: none;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -ms-flex-align: center;
  align-items: center;
  }

  .nav-link-6 {
    font-family: Roboto, sans-serif;
    color: #fff;
    font-size: 18px;
    font-weight: 400;
    }
    
    .nav-link-5 {
    margin-left: 10px;
    font-family: Roboto, sans-serif;
    color: #fff;
    font-size: 18px;
    font-weight: 400;
    }
    
    .nav-link-3 {
    margin-left: 7px;
    font-family: Roboto, sans-serif;
    color: #fff;
    font-size: 18px;
    font-weight: 400;
    }
    
    .nav-link-3 {
    margin-left: 7px;
    font-family: Roboto, sans-serif;
    color: #fff;
    font-size: 18px;
    font-weight: 400;
    }
    
    .nav-link-2 {
    margin-left: 11px;
    font-family: Roboto, sans-serif;
    color: #fff;
    font-size: 18px;
    font-weight: 400;
    }
    
    .button-2 {
    width: auto;
    margin-left: 29px;
    padding: 7px 12px;
    border-radius: 8px;
    background-color: #ff9283;
    font-family: Roboto, sans-serif;
    color: #222;
    font-size: 18px;
    font-weight: 400;
    text-align: center;
    }
    
.nav-link {
  display: none;
  margin-left: 8px;
  font-family: Barlow;
  color: hsla(0, 0%, 100%, 0.75);
  font-size: 16px;
  font-weight: 600;
}

#main {
  margin-top: 100px;
}

.page__inner-wrap {
  width: 130% !important;
}

.page__content {
  margin-left: 60px !important;
  margin-right: -240px !important;
}

.archive {
  padding-right: 0px;
  padding-left: 60px;
}

.sidebar__right {
  // width: 240px;
  display: none;
}

h2 {
  margin-top: 0px;
}

#page-title {
  display: none;
}

.site-title {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -ms-flex-item-align: center;
  align-self: center;
  font-weight: bold;
  font-size: $type-size-2; // DeepSpeed: increase size
}

.nav-menu a:hover, .nav-menu a:visited {
  color: #fff;
}

.nav-menu a.button-2:hover, .nav-menu a.button-2:visited {
  color: #222;
}

.toc {
  font-family: $sans-serif-narrow;
  color: $gray;
  background-color: $background-color;
  border: 1px solid $border-color;
  border-radius: $border-radius;
  -webkit-box-shadow: $box-shadow;
  box-shadow: $box-shadow;
	//position: fixed;
  .nav__title {
    color: #fff;
    font-size: $type-size-6;
    background: $primary-color;
    border-top-left-radius: $border-radius;
    border-top-right-radius: $border-radius;
  }

  // Scrollspy marks toc items as .active when they are in focus
  .active a {
    @include yiq-contrasted($active-color);
  }
}

